WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145579
AutoFill button should not be shown in read-only or disabled field
https://bugs.webkit.org/show_bug.cgi?id=145579
Summary
AutoFill button should not be shown in read-only or disabled field
Daniel Bates
Reported
2015-06-02 17:03:03 PDT
Currently we should the AutoFill button in a read-only field. There is little to no value in showing the AutoFill button in such field. We should not show it.
Attachments
Patch and layout tests
(79.90 KB, patch)
2015-06-02 17:13 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-06-02 17:03:59 PDT
<
rdar://problem/21212494
>
Daniel Bates
Comment 2
2015-06-02 17:13:06 PDT
Created
attachment 254124
[details]
Patch and layout tests
Daniel Bates
Comment 3
2015-06-03 13:45:19 PDT
Comment on
attachment 254124
[details]
Patch and layout tests Clearing flags on attachment: 254124 Committed
r185166
: <
http://trac.webkit.org/changeset/185166
>
Daniel Bates
Comment 4
2015-06-03 13:45:22 PDT
All reviewed patches have been landed. Closing bug.
Daniel Bates
Comment 5
2015-06-03 15:31:04 PDT
Reverted inadvertent change to Windows expected result for test fast/forms/auto-fill-button/input-auto-fill-button.html and committed fix in <
http://trac.webkit.org/changeset/185171
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug